--- a/src/main/webapp/css/estilos.css
+++ b/src/main/webapp/css/estilos.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #F5F5F5;
+    background-color: #EAEAEA;
     margin: 0;
     padding: 20px;
     display: flex;
